[Authentication]: Added username, first name and last name field for registration.
