# src/models/IRegistrationModel.ts
@@ -1,0 +1,7 @@
+export interface IRegistrationPayload {
+    username: string,
+    email: string,
+    password: string,
+    firstName: string,
+    lastName: string,
+}
